# AReaL

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_SETUP_SUMMARY.md  Dockerfile  Dockerfile.a2  Dockerfile.a3  GOVERNANCE.md  LICENSE  LOCAL_TRAINING_SUMMARY.md  Makefile  Project_Proposal.md  README.md  README_share.md  ROADMAP.md  TREE_DATA_VISUALIZATION.md  add_qwen_text.py  analyser.py  any_agent_rl.md  continuous_launch.sh  count_accelerate_ratio.py  doc_write_plan.md  download.sh  fix_sglang.py  hi.py  launch_container.sh  load_and_save.py  lora-global-plan.md  moonlight_moe_r3.txt  prepare_trainig_data.py  prev_release.md  proposal.docx  pyproject.toml  (+29 more)
.claude/: index.json  settings.json
.codex/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml  ruleset.json
100M_attention/: custom_model_patcher.py  custom_positional_encoding.py  example_suage.sh  example_usage.md  inference.py  inference_different_k_q.py  inference_partial.py  inference_separate_kq.py  requirement.txt  stand_alone_sft.py  test.sh  train.sh
Eval/: README.md  aggregate_accuracy.py  generation.py  new_batch_inference_new.py  test_32_times_auto.sh
LLM_Test-time_Scaling/: .gitignore  README.md  requirements.txt
LLaMA-Factory-direct-conversation/: .gitignore  deepspeed_config.json  eval.sh  eval_aime.py  model_test  qwen3-aime.md  run_eval.sh  train_config.yaml  train_entry.sh  train_parallel.yaml  train_seq.yaml
Test/: generation.py  parallel_generation_demo.py  test8times.sh
Test_1.0/: generation_new_copy.py  new_batch_inference_copy.py  test8times_shell_input.sh
Test_latest/: README_AUTO_GRADING.md  aggregate_results.py  generation_new.py  generation_simple.py  grading_report.txt  new_batch_inference_new.py  run_batch_inference_new.py  test16times_shell_input_tp.sh  test16times_shell_input_tp_v2.sh  test32times_8_servers.sh  test8times_shell_input.sh
Test_no_conclusion/: generation_new.py
ablate_data/: README.md
api_call/: solve_all_problems_gpt.py
examples/experimental/inference_service/batchmode/tau2/: pyproject.toml  task_runner.py  task_runner_socket.py
examples/experimental/inference_service/batchmode/tau2/openclaw/: __init__.py  agent.py  service.py  workspace_manager.py
examples/experimental/inference_service/batchmode/tau2/tau2_env/: __init__.py  environment_socket.py  evaluator.py
examples/terminal_bench/: README.md  agent_rl_config.py  command.sh  config_tb_sglang.yaml  config_tb_vllm_npu.yaml  pre_commit.txt  pyproject.toml  train.py  train_filtered_easy.parquet
examples/terminal_bench/agent/: __init__.py  camel_terminal_agent.py  chat_agent_trace.py  prompts.py
examples/terminal_bench/workflow/: __init__.py  camel_rlvr_workflow.py  pre_build_tasks_utils.py
(+4887 files in other folders)
